Fix portuguese errors

--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,11 +1,11 @@
 \chapter{Introdução}
 \label{introduction}
 
-Desde tempos remotos, segredos sempre existiram e métodos para deixá-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando descobrí-los. ~\cite{alexander-maximov} %ok
+Desde tempos remotos, segredos sempre existiram e métodos para deixá-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando descobri-los. ~\cite{alexander-maximov} %ok
 
 Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações. 
 
-Um dos métodos para obter informações sem a autorização necessária é a análise de frequência da ocorrência de caracteres dessas informações escondidas. Há estudos que indicam qual a frequência média de utilização de cada letra em um texto. Analisando um texto cifrado e calculando a frequência de ocorrencia dos caracteres do mesmo, pode ser possível, através da substituição dos mesmos pelos caracteres com frequência similar da língua, quebrar a cifragem utilizada e ter acesso à mensagem original.
+Um dos métodos para obter informações sem a autorização necessária é a análise de frequência da ocorrência de caracteres dessas informações escondidas. Há estudos que indicam qual a frequência média de utilização de cada letra em um texto. Analisando um texto cifrado e calculando a frequência de ocorrência dos caracteres do mesmo, pode ser possível, através da substituição dos mesmos pelos caracteres com frequência similar da língua, quebrar a cifragem utilizada e ter acesso à mensagem original.
 
 \section{Problema}
 
