--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -25,7 +25,9 @@ Esse trabalho visa apresentar um algoritmo de criptografia que dificulte a anál
 	\item Identificar e estudar as principais formas de criptografia.
 	\item Identificar e estudar as principais formas de criptoanálise.
 	\item Identificar e estudar geradores de números pseudo-aleatórios.
-	\item Realizar a primeira proposta de algoritmo.
+	\item Realizar a proposta de algoritmo.
+	\item Implementar o algoritmo proposto.
+	\item Realizar experimentos afim de compara-los com resultados de outros algoritmos conhecidos.
 \end{itemize}
 
 \section{Organização do Trabalho}
@@ -38,5 +40,9 @@ No capítulo \ref{cryptograhy} são apresentados os principais tipos de algoritm
 No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicada a importância desses geradores para a criptografia. 
 
 No capitulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
+
+No capítulo \ref{implementation} é explicado como foi feito a implementação com a arquitetura que foi utilizada e os passos para utilizar o algoritmo.
+
+No capítulo \ref{results} é explicado os experimentos realizados e como foi feita a coleta de dados desses experimentos. 
 
 No capitulo \ref{conclusion} é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
