--- a/fixos/listasAutomaticas.tex
+++ b/fixos/listasAutomaticas.tex
@@ -3,4 +3,6 @@
 \cleardoublepage
 \pdfbookmark[0]{\listtablename}{lot}
 \listoftables*
+\lstlistoflistings
+\renewcommand\lstlistingname{Lista de Códigos}
 \cleardoublepage
