Changes and adding pseudo code for the algorithm chapter

--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -41,7 +41,7 @@ No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador
 
 No capitulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
 
-No capítulo \ref{implementation} é explicado como foi feito a implementação com a arquitetura que foi utilizada e os passos para utilizar o algoritmo.
+No capítulo \ref{implementation-algorithm} é explicado como foi feito a implementação com a arquitetura que foi utilizada e os passos para utilizar o algoritmo.
 
 No capítulo \ref{results} é explicado os experimentos realizados e como foi feita a coleta de dados desses experimentos. 
 
