--- a/fixos/listasAutomaticas.tex
+++ b/fixos/listasAutomaticas.tex
@@ -3,6 +3,7 @@
 \cleardoublepage
 \pdfbookmark[0]{\listtablename}{lot}
 \listoftables*
+\cleardoublepage
 \lstlistoflistings
 \renewcommand\lstlistingname{Lista de Códigos}
 \cleardoublepage
