--- a/fixos/listasAutomaticas.tex
+++ b/fixos/listasAutomaticas.tex
@@ -4,6 +4,7 @@
 \pdfbookmark[0]{\listtablename}{lot}
 \listoftables*
 \cleardoublepage
+\renewcommand{\lstlistlistingname}{Lista de códigos}
+\renewcommand\lstlistingname{Código}
 \lstlistoflistings
-\renewcommand\lstlistingname{Lista de Códigos}
 \cleardoublepage
